welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:32: error: ')' expected but ';' found.
	droite();
                ^